--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,17 @@
         <url>http://build.geo-solutions.it/jenkins/view/GeoServer-manager/</url>
     </ciManagement>
 
+ <distributionManagement>
+   <repository>
+   <id>release</id>
+   <url>${acd.repository.release.url}</url>
+   </repository>
+   <snapshotRepository>
+   <id>snapshot</id>
+   <url>${acd.repository.snapshot.url}</url>
+   </snapshotRepository>
+ </distributionManagement> 
+
  <repositories>
   <repository>
    <id>boundless</id>
@@ -154,20 +165,6 @@
      </releases>
     </repository>
  </repositories>
-
-    <distributionManagement>
-        <downloadUrl>http://maven.geo-solutions.it</downloadUrl>
-        <repository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>geosolutions</id>
-            <url>ftp://maven.geo-solutions.it/</url>
-        </repository>
-        <site>
-            <id>demo.geosolutions</id>
-            <url>scp://demo.geo-solutions.it/var/www/share/github/gsman</url>
-        </site>
-    </distributionManagement>
-
 
     <build>
         <plugins>
@@ -256,6 +253,14 @@
 
     <properties>
         <slf4j.version>1.5.11</slf4j.version>
+     	<acd.issueManagement.system>Jira</acd.issueManagement.system>
+	<acd.issueManagement.url>https://www.milieuinfo.be/jira</acd.issueManagement.url>
+	<acd.ciManagement.system>Bamboo</acd.ciManagement.system>
+	<acd.ciManagement.url>https://www.milieuinfo.be/bamboo</acd.ciManagement.url>
+	<acd.repository.url>https://www.milieuinfo.be/artifactory</acd.repository.url>
+	<acd.repository.snapshot.url>${acd.repository.url}/snapshot</acd.repository.snapshot.url>
+	<acd.repository.release.url>${acd.repository.url}/release</acd.repository.release.url>
+	<acd.scm.maven-url>scm:svn:https://svn.milieuinfo.be/productie/svn</acd.scm.maven-url>
     </properties>
 
     <dependencies>
