--- a/pom.xml
+++ b/pom.xml
@@ -315,11 +315,11 @@
             <classifier>jdk15</classifier>
         </dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.restlet</artifactId>
 			<version>1.1.10_3</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>org.slf4j</groupId>
