configure for central repo deployment

--- a/pom.xml
+++ b/pom.xml
@@ -155,19 +155,16 @@
     </repository>
  </repositories>
 
-    <distributionManagement>
-        <downloadUrl>http://maven.geo-solutions.it</downloadUrl>
-        <repository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>geosolutions</id>
-            <url>ftp://maven.geo-solutions.it/</url>
-        </repository>
-        <site>
-            <id>demo.geosolutions</id>
-            <url>scp://demo.geo-solutions.it/var/www/share/github/gsman</url>
-        </site>
-    </distributionManagement>
-
+ <distributionManagement>
+  <snapshotRepository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+  </snapshotRepository>
+  <repository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+  </repository>
+ </distributionManagement>
 
     <build>
         <plugins>
@@ -220,6 +217,33 @@
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
+	    <!--sonatype-->
+	    <plugin>
+      		<groupId>org.sonatype.plugins</groupId>
+      		<artifactId>nexus-staging-maven-plugin</artifactId>
+      		<version>1.6.7</version>
+      		<extensions>true</extensions>
+      		<configuration>
+        	 <serverId>ossrh</serverId>
+        	 <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+        	 <autoReleaseAfterClose>true</autoReleaseAfterClose>
+      		</configuration>
+    	    </plugin>
+	    <!--gpg-->
+    	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-gpg-plugin</artifactId>
+	      <version>1.5</version>
+	      <executions>
+		<execution>
+		  <id>sign-artifacts</id>
+		  <phase>verify</phase>
+		  <goals>
+		    <goal>sign</goal>
+		  </goals>
+		</execution>
+	      </executions>
+	    </plugin>
         </plugins>
 
         <!-- ======================================================== -->
