--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>it.geosolutions</groupId>
+    <groupId>com.github.dov-vlaanderen</groupId>
     <artifactId>geoserver-manager</artifactId>
     <version>1.8-SNAPSHOT</version>
 
