--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
     <groupId>it.geosolutions</groupId>
     <artifactId>geoserver-manager</artifactId>
-    <version>1.8-dov-0.4</version>
+    <version>1.8-dov-0.5-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
